# mobilitaetscheck-fuer-magistratsvorlagen

./: .dockerignore  .gitignore  404.html  LICENSE  README.md  env.example  example.env  export_to_pdf.js  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml
backend/: .gitignore  README.md  alembic.ini  deploy.sh  gunicorn.service  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1309540a7ffc_rename_objetives.py  13f3c4893b87_drop_user_table.py  1f5cbc86b396_add_magistratsvorlage.py  2f9170c7585a_update_text_blocks.py  3297a033ac1c_add_source_col_for_indicators.py  66c4eec9485b_fix_errors_in_klimarelevanzpruefung_fb2.py  787930773226_add_user_role.py  79578ae70596_add_relations.py  83a75db6b1d5_fix_typo.py  925d59f158e5_update_moddels_with_enums.py  941ce3c5619c_rename_climate_submission_columns.py  a8a693590fb2_init_database.py  bc515597f5c5_klimarelevanzpruefung.py  bc641731e773_update_ondelete.py  bcd26d6bce92_rename_sequences.py  c32c9e65cb91_fix_renaming_bugs_mobilitäaetscheck_.py  c77fba81521e_name_chekcs.py  d47b21bc9892_rename_subresult.py  da068b9a5578_fix_renaming_bugs.py  dfe2ecad274e_alter_administration_id_type.py  e14bf3114af2_add_user_and_municipality.py  e213d69a710b_add_alter_role_to_string.py  f765b1eeb897_create_user_table_with_fastapi_users.py  (+2 more)
backend/app/: exceptions.py  main.py
backend/db_backups/: backup_data_only.dump  backup_specific_tables.dump  backup_specific_tables_data_only.dump
backend/tests/: conftest.py  test_real_estate.py  test_user.py
docker/: Dockerfile
(+364 files in other folders)
