[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "fastapi-mail>=1.4.2",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.115.11",
    "fpdf2>=2.8.2",
    "geoalchemy2>=0.17.1",
    "psycopg[binary]>=3.2.5",
]

[dependency-groups]
prod = [
    "gunicorn>=23.0.0",
]
